# ProductReview-django

./: README.md  pyproject.toml
product_review/: settings.py  urls.py
reviews/: admin.py  models.py  serializers.py  views.py
reviews/migrations/: 0001_initial.py  0002_productsite_price.py
